...
                                        <rect key="frame" x="129" y="340" width="43" height="35"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                        <state key="normal" title="Save">
                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.64761929898648651" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RAF Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NJ0-Ad-Q6d">
                                                    <rect key="frame" x="20" y="15" width="75" height="18"/>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
...
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Refer a Friend" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbU-cL-oj1">
                                <rect key="frame" x="20" y="78" width="984" height="21"/>
                                <constraints>
...
                                                </connections>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Campaign" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R9n-30-mAw">
                                                <rect key="frame" x="20" y="294" width="73" height="19"/>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
...
                    </view>
                    <extendedEdge key="edgesForExtendedLayout"/>
                    <navigationItem key="navigationItem" title="Edit Refer-a-friend View" id="Nv9-cQ-7Kz"/>
                    <connections>
                        <outlet property="btnButtonColor" destination="0xe-Wp-NI2" id="vqy-0J-Yzd"/>
...
                                                        </constraints>
                                                    </imageView>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ucj-Qf-cte">
                                                        <rect key="frame" x="46" y="58" width="194" height="27"/>
                                                        <color key="tintColor" red="0.23529411759999999" green="0.59215686270000001" blue="0.82745098039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                        </connections>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c6s-qm-ZLG">
                                                        <rect key="frame" x="44" y="10" width="196" height="27"/>
                                                        <color key="tintColor" red="0.23529411759999999" green="0.59215686270000001" blue="0.82745098039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                                <state key="normal" title="Sign In">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
