...
}

- (void)viewDidAppear:(BOOL)animated {
    if (!self.lblCopied) {
        self.lblCopied = [[UILabel alloc] initWithFrame:CGRectMake(self.view.frame.size.width/2 - copiedWdt/2, self.view.frame.size.height, copiedWdt, copiedHgt)];
        self.lblCopied.font = [UIFont fontWithName:@"HelveticaNeue-Light" size:16];
        self.lblCopied.text = @"Copied!";
        self.lblCopied.clipsToBounds = YES;
        self.lblCopied.textAlignment = NSTextAlignmentCenter;
        self.lblCopied.textColor = [UIColor whiteColor];
        self.lblCopied.backgroundColor = [UIColor colorWithWhite:0.1 alpha:0.7];
        self.lblCopied.layer.cornerRadius = copiedHgt/2;
        
...
